result/esptool-ck.txt

smatch check :
/home/lsc20011130/CTestRobot/projects/esptool-ck/binimage/esptool_binimage.c:54 binimage_add_segment() error: we previously assumed 'b_image.segments' could be null (see line 52)
/home/lsc20011130/CTestRobot/projects/esptool-ck/elf/esptool_elf_object.c:251 get_elf_section_bindata() warn: possible memory leak of 'bindata'
/home/lsc20011130/CTestRobot/projects/esptool-ck/espcomm/espcomm.c:196 espcomm_send_command() warn: inconsistent indenting
/home/lsc20011130/CTestRobot/projects/esptool-ck/espcomm/espcomm.c:205 espcomm_send_command() warn: inconsistent indenting
/home/lsc20011130/CTestRobot/projects/esptool-ck/espcomm/espcomm.c:211 espcomm_send_command() warn: inconsistent indenting
/home/lsc20011130/CTestRobot/projects/esptool-ck/espcomm/espcomm.c:223 espcomm_send_command() warn: inconsistent indenting
/home/lsc20011130/CTestRobot/projects/esptool-ck/espcomm/espcomm.c:248 espcomm_sync() warn: inconsistent indenting
/home/lsc20011130/CTestRobot/projects/esptool-ck/espcomm/espcomm.c:274 espcomm_open() warn: inconsistent indenting
/home/lsc20011130/CTestRobot/projects/esptool-ck/espcomm/espcomm.c:277 espcomm_open() warn: inconsistent indenting
/home/lsc20011130/CTestRobot/projects/esptool-ck/main.c:52 main() warn: inconsistent indenting
/home/lsc20011130/CTestRobot/projects/esptool-ck/serialport/serialport.c:595 serialport_receive_slip() error: uninitialized symbol 'cur_byte'.
/home/lsc20011130/CTestRobot/projects/esptool-ck/serialport/serialport.c:657 serialport_receive_C0() warn: inconsistent indenting

cppcheck:
/home/lsc20011130/CTestRobot/projects/esptool-ck/elf/esptool_elf_object.c:251:17: error: Memory leak: bindata [memleak]
                return 0;
                ^
/home/lsc20011130/CTestRobot/projects/esptool-ck/elf/esptool_elf_object.c:257:17: error: Memory leak: bindata [memleak]
                return 0;
                ^
